--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/samsrose/samsrose.github.io#readme",
   "devDependencies": {
+    "bourbon": "^5.0.0",
     "browser-sync": "^2.23.5",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "neat": "^1.2.2"
   }
 }
