--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bourbon": "^5.0.0",
     "browser-sync": "^2.23.5",
     "gulp": "^3.9.1",
+    "gulp-connect": "^5.2.0",
     "gulp-sass": "^3.1.0",
     "neat": "^1.2.2"
   }
